# learning

agda/hello-world/: Makefile  hello-world.agda
agda/plfa-solutions/: README.md
alg-eff/haskell/: README.md
alg-eff/haskell/effectful/: CHANGELOG.md  effectul-lrn.cabal
alg-eff/haskell/tests/: CHANGELOG.md  Makefile  eff.cabal
alg-eff/haskell/tests/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
alg-eff/haskell/tests/src/: Main.hs
alg-eff/haskell/tests/src/Lib/Env/: Env.hs
alg-eff/koka/: README.md
alg-eff/papers/: TALKS.md
alg-eff/typescript/: package-lock.json  package.json
ats/: DEFINITIONS.md  README.md
ats/FPBerlinATSTalk/: README.md
ats/binary-search/: Makefile  main.dats
ats/eight-queens-puzzle/: Makefile  main.dats
ats/fact/: Makefile  main.dats
ats/hello-world/: main_dats.c  test
ats/malloc/: main.dats
ats/unsafe_c/: Makefile  main.dats  main_dats.c  main_dats_without_import.c
hello-world/: Makefile  main.dats
idris/proofs/: Makefile  kata  main.idr  proofs.ipkg
idris/proofs/src/: main.idr
idris/protocols/: Makefile  protocols.ipkg
idris/refc/: Makefile  refc.ipkg
opencascade/bottle/: Bottle.cpp  Bottle.h  GlfwOcctView.cpp  GlfwOcctView.h  Makefile  prog
opencascade/glfw/: CHANGELOG.md  LICENSE  glfw-demo.cabal
opencascade/init/: GlfwOcctView.cpp  GlfwOcctView.h  Makefile  main.cpp  prog
openscad/: animation.scad
riscv/barebone/: Makefile  entry.s  linker.ld
riscv/docs/: compiling.md
riscv/linux/: Makefile
rust/hello-world/: Makefile
(+37 files in other folders)
