cabal-version:      2.4
name:               eff
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Rafael
maintainer:         rafael.prevost.15@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable eff
    import:           warnings
    main-is:          Main.hs
    other-modules: Lib.Env.Env
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
